--- a/cercatreni.html
+++ b/cercatreni.html
@@ -71,7 +71,7 @@ layout: default
 
     <script type="text/javascript">
 	    $(".form_datetime").datetimepicker({
-	        format: "dd MM yyyy - hh:i"
+	        format: "dd mm yyyy - hh:i"
 	    });
 	</script>   
 
