--- a/test.html
+++ b/test.html
@@ -1,15 +1,13 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="contact form example">
-  <title>Contact Example</title>
-</head>
+---
+layout: mappa
+---
 
-<body>
-  <h2 class="content-head">Contact Us!</h2>
+<h1>Segnalazione problemi su sentieri</h1>
+ <div id="mapid"></div>
 
+<hr>
+
+<div class="container">
 
 <!-- START HERE -->
    <link rel="stylesheet" href="pure.css">
@@ -29,7 +27,7 @@
 
       <fieldset class="pure-group">
         <label for="message">Message: </label>
-        <textarea id="message" name="message" rows="10"
+        <textarea id="message" name="message" rows="3"
         placeholder="Descrivi cosa hai trovato o visto"></textarea>
       </fieldset>
 
@@ -42,11 +40,8 @@
       </fieldset>
       
       <fieldset class="pure-group">
-       <label for="latlng">Lat/Lon</label>
-        <input type="text" class="form-control" id="latlng" placeholder="latlng" required>
-        <div class="valid-feedback">
-          Dato corretto!
-        </div>
+        <label for="latlng">Lat/Lon</label>
+        <input id="latlng" name="latlng" placeholder="Coordinate lat/lon" />
       </fieldset>
       
 
@@ -63,10 +58,48 @@
 
   </form>
 
+</div>
   <!-- Submit the Form to Google Using "AJAX" -->
   <script data-cfasync="false" type="text/javascript"
   src="form-submission-handler.js"></script>
 <!-- END -->
 
-</body>
-</html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<script>
+  var mymap = L.map('mapid').setView([44.1412, 9.6975], 13);
+
+/* MAPBOX DEFAULT
+  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+      attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+      maxZoom: 18,
+      id: 'mapbox/streets-v11',
+      accessToken: 'pk.eyJ1IjoiZGFuaW1vZyIsImEiOiJjazU2bXYzd2MwMHBqM2VwODB4OWFsbThxIn0.k649E3FDd87NRgiEHpP0Xg'
+  }).addTo(mymap);
+*/
+
+/** Thunderforest MAP - OUTDOOR*/
+  L.tileLayer('https://tile.thunderforest.com/outdoors/{z}/{x}/{y}.png?apikey=727f06842d1e4a478a84cd4795ba5a6f', {
+    attribution: 'Written by <a target="_blank" href="http://www.danielemoggia.it" data-position-to="window">danielemoggia.it</a> | &copy; <a target="_blank" href="http://osm.org/copyright">OpenStreetMap</a> contributors '
+  }).addTo(mymap);
+
+  function onMapClick(e) {
+      console.log("Posizione: " + e.latlng.toString());
+      document.getElementById('latlng').value = getLatLonValue(e.latlng);
+  }
+
+  function getLatLonValue(latlng){
+    var str = latlng.toString();
+    //var value = str.slice(7,25);
+
+    var pos_p = str.indexOf("(");
+    var pos_a = str.indexOf(")");
+
+    var value = str.slice(pos_p+1, pos_a);
+
+    return value;
+  }
+
+  mymap.on('click', onMapClick);
+
+</script>
